# titania-q

./: .gitignore  LICENSE  README-ID.md  README.md  next.config.js  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  database.rs  error.rs  main.rs
src/app/: layout.tsx  page.tsx
src/app/api/consult-database/: route.ts
src/app/api/generate-diagram/: route.ts
src/app/api/generate-insights/: route.ts
src/app/api/generate-sql/: route.ts
src/app/api/get-available-models/: route.ts
src/app/api/validate-ai-key/: route.ts
src/components/: AIConsultation.tsx  AIProviderConfigForm.tsx  DatabaseConfigForm.tsx  DatabaseInsights.tsx  DatabaseManagementPanel.tsx  DatabaseManagementPanel_compact.tsx  DatabaseRelationDiagram.tsx  FloatingQueryEditor.tsx  LanguageSwitcher.tsx  QueryInterface.tsx  QueryLog.tsx  ResultsDisplay.css  ResultsDisplay.tsx
src/components/ui/: badge.tsx
src/hooks/: useI18n.ts
src/lib/: ai-service.ts  i18n.ts  storage.ts
src/types/: ai.ts  database.ts
